content: update skills for eScience workshop manager

--- a/skills.tex
+++ b/skills.tex
@@ -3,16 +3,16 @@
 
 \begin{rubric}{Skills}
 \noentry{2014 -- 2015}
-\entry*[Languages]
-	Strong reading, writing and speaking competencies for English and Italian
 \entry*[Data analysis]
-	Multiple Imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing
+Multiple Imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing
 \entry*[Coding and software tools\hfill]
-	R, Python, SPSS, Git, Shell script, \LaTeX, Markup,
+R, cluster computing, Git, Bash, Python, \LaTeX, SPSS
 %\entry*[Databases]
 %	My\smallcaps{SQL}, Postgre\smallcaps{SQL}, \smallcaps{HSQL}, \smallcaps{SQL}ite, LotusNotes.
 \entry*[Web Dev]
-	R blogdown, Shiny, \textsc{Html, css}
+R Shiny, Hugo, R blogdown, \textsc{css}
 \entry*[Misc.]
-	Academic research, teaching, consultation
+Academic research, teaching, consultation
+\entry*[Languages]
+	Strong reading, writing, and speaking competencies in English and Italian
 \end{rubric}
