job: eScience center submission

--- a/employment.tex
+++ b/employment.tex
@@ -1,10 +1,27 @@
-\begin{rubric}{Employment History}
-\entry*[2019 -- $\cdots\cdot$]%
-	\textbf{Ph.D. Researcher,} Tilburg University.
 %
 % Blank lines result in extra space!
 %
+\begin{rubric}{Employment History}
+\entry*[2019 -- $\cdots\cdot$]%
+	\textbf{Ph.D. Researcher,} Department of Methodology and Statistics, Tilburg University.
+
+	Tasks:
+
+	- Developing new methods in the field of missing data imputation
+
+	- Teaching R programming and data analysis in R
+
+	- Coordinating teaching assistants for a statistics course
+	
 \entry*[2018 -- 2019]%
-	\textbf{Teaching Assistant.} Methodology and Statistics Department, School of Social and Behavioural Sciences, Tilburg University.
+	\textbf{Teaching Assistant,} Department of Methodology and Statistics, Tilburg University. 
+		
+	Courses:
+
+	- Computational statistics (master's level)
+
+	- Statistics and methodology (master's level)
+
+	- Experimental research methods (bachelor's level)
 %
 \end{rubric}
