--- a/skills.tex
+++ b/skills.tex
@@ -4,14 +4,14 @@
 \begin{rubric}{Skills}
 \noentry{2014 -- 2015}
 \entry*[Data analysis]
-Multiple Imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing
+Multiple imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing
 \entry*[Coding and software tools\hfill]
 R, cluster computing, Git, Bash, Python, \LaTeX, SPSS
 %\entry*[Databases]
 %	My\smallcaps{SQL}, Postgre\smallcaps{SQL}, \smallcaps{HSQL}, \smallcaps{SQL}ite, LotusNotes.
-\entry*[Web Dev]
+\entry*[Web development]
 R Shiny, Hugo, R blogdown, \textsc{css}
-\entry*[Misc.]
+\entry*[Miscellaneous]
 Academic research, teaching, consultation
 \entry*[Languages]
 	Strong reading, writing, and speaking competencies in English and Italian
