--- a/education.tex
+++ b/education.tex
@@ -2,7 +2,7 @@
 % Tilburg - Research master
 \entry*[2017 -- 2019]%
 	\textbf{Research Master} in Methodology and Statistics for Social and Behavioral Sciences.
-	\par University: \emph{Tilburg University, Netherlands}
+	\par University: \emph{Tilburg University, the Netherlands}
 	\par Grade: \emph{Cum Laude (with honors)}
 	\par Thesis title: \emph{Bayesian Hierarchical Modeling: A sensitivity analysis of prior distributions for the covariance matrix in hierarchical models}
 % Trento - Bachelor's degree
