--- a/own-bib.bib
+++ b/own-bib.bib
@@ -1,13 +1,21 @@
 @article{costantiniEtAl:2022a,
-  title={High-dimensional imputation for the social sciences: a comparison of state-of-the-art methods},
-  author={Costantini, Edoardo and Lang, Kyle M and Reeskens, Tim and Sijtsma, Klaas},
-  journal={arXiv preprint arXiv:2208.13656},
-  year={2022}
+  doi       = {10.48550/ARXIV.2208.13656},
+  url       = {https://arxiv.org/abs/2208.13656},
+  author    = {Costantini, Edoardo and Lang, Kyle M. and Reeskens, Tim and Sijtsma, Klaas},
+  keywords  = {Methodology (stat.ME), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {High-dimensional imputation for the social sciences: a comparison of state-of-the-art methods},
+  publisher = {arXiv},
+  year      = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
 }
 
 @article{costantiniEtAl:2022b,
-  title={Solving the "many variables" problem in MICE with principal component regression},
-  author={Costantini, Edoardo and Lang, Kyle M and Sijtsma, Klaas and Reeskens, Tim},
-  journal={arXiv preprint arXiv:2206.15107},
-  year={2022}
+  doi       = {10.48550/ARXIV.2206.15107},
+  url       = {https://arxiv.org/abs/2206.15107},
+  author    = {Costantini, Edoardo and Lang, Kyle M. and Sijtsma, Klaas and Reeskens, Tim},
+  keywords  = {Methodology (stat.ME), Applications (stat.AP), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Solving the "many variables" problem in MICE with principal component regression},
+  publisher = {arXiv},
+  year      = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
 }
