--- a/resume.tex
+++ b/resume.tex
@@ -31,8 +31,7 @@
 \addbibresource{own-bib.bib}
 
 %% Specify your last name and first name (as given in the .bib) to automatically bold your own name in the publications list. One caveat: You need to write \bibnamedelima where there's a space in your name for this to work properly for now...
-\myname{Lim}{Lian\bibnamedelima Tze}
-% \myname{d'Andrimont}{Raphaël}
+\myname{Costantini}{Edoardo}
 
 % Change the page margins if you want
 % \geometry{left=1cm,right=1cm,top=1.5cm,bottom=1.5cm}
