revision: modify after comments by Florian

--- a/education.tex
+++ b/education.tex
@@ -4,7 +4,7 @@
 	\textbf{Research Master} in Methodology and Statistics for Social and Behavioral Sciences.
 	\par University: \emph{Tilburg University, the Netherlands}
 	\par Grade: \emph{Cum Laude (with honors)}
-	\par Thesis title: \emph{Bayesian Hierarchical Modeling: A sensitivity analysis of prior distributions for the covariance matrix in hierarchical models}
+	% \par Thesis title: \emph{Bayesian Hierarchical Modeling: A sensitivity analysis of prior distributions for the covariance matrix in hierarchical models}
 % Trento - Bachelor's degree
 \entry*[2014 -- 2017]%
 	\textbf{Bachelor's degree} in Sociology.
