--- a/publications.tex
+++ b/publications.tex
@@ -1,5 +1,5 @@
 %% Sometimes when a section can't be nicely modelled with the \entry[]... mechanism; hack our own
-\makerubrichead{Research Publications}
+\makerubrichead{Research}
 
 %% Assuming you've already given \addbibresource{own-bib.bib} in the main doc. Right? Right???
 \nocite{*}
@@ -7,7 +7,7 @@
 %% If you just want everything in one list
 % \printbibliography[heading={none}]
 
-\printbibliography[heading={subbibliography},title={Journal Articles},type=article]
+\printbibliography[heading={subbibliography},title={Academic articles},type=article]
 
 %\printbibliography[heading={subbibliography},title={Conference Proceedings},type=inproceedings]
 %
