--- a/resume.tex
+++ b/resume.tex
@@ -10,28 +10,22 @@
 
 % Uncomment to enable Chinese; needs XeLaTeX
 % \usepackage{ctex}
-
 \usepackage{settings}
+\usepackage[T1]{fontenc}
+\usepackage[p,osf,swashQ]{cochineal}
+\usepackage{cabin}
+\usepackage[varqu,varl,scale=0.9]{zi4}
 
-% Change the fonts if you want
-\ifxetexorluatex % If you're using XeLaTeX or LuaLaTeX
-  \usepackage{fontspec} 
-  %% You can use \setmainfont etc; I'm just using these font packages here because they provide OpenType fonts for use by XeLaTeX/LuaLaTeX anyway
-  \usepackage[p,osf,swashQ]{cochineal}
-  \usepackage[medium,bold]{cabin}
-  \usepackage[varqu,varl,scale=0.9]{zi4}
-\else % If you're using pdfLaTeX or latex
-  \usepackage[T1]{fontenc}
-  \usepackage[p,osf,swashQ]{cochineal}
-  \usepackage{cabin}
-  \usepackage[varqu,varl,scale=0.9]{zi4}
-\fi
+% Spacing
+\usepackage{setspace}
+\singlespacing
+% \onehalfspacing
+%\doublespacing
+%\setstretch{1.1}
 
-%% Only needed if you want a Publication List
+% Publication List
 \addbibresource{own-bib.bib}
-
-%% Specify your last name and first name (as given in the .bib) to automatically bold your own name in the publications list. One caveat: You need to write \bibnamedelima where there's a space in your name for this to work properly for now...
-\myname{Costantini}{Edoardo}
+\myname{Costantini}{Edoardo} % Make name bold
 
 % Change the page margins if you want
 % \geometry{left=1cm,right=1cm,top=1.5cm,bottom=1.5cm}
@@ -44,8 +38,8 @@
 % \prefixmarker{$\diamond$}
 
 %% Photo is only shown if "fullonly" is included
-%\includecomment{fullonly}
- \excludecomment{fullonly}
+\includecomment{fullonly}
+%  \excludecomment{fullonly}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -54,16 +48,19 @@
 \leftheader{%
   {\LARGE\bfseries\sffamily Edoardo Costantini}
 
-  \makefield{\faEnvelope[regular]}{\texttt{costantini.edoardo@yahoo.com}}
-%  \makefield{\faTwitter}{\texttt{@example}}
+  \makefield{\faBirthdayCake}{Date of birth:       16 October 1994}
 
-  \makefield{\faGlobe}{\url{https://edoardocostantini.github.io}}
+  \makefield{\faMap}{Nationality:         Italian}
 
-  \makefield{\faGithub}
-  {\url{https://github.com/EdoardoCostantini}}
+  \makefield{\faHome}{Address: Schouwburgring 77-25, Tilburg}
 
-  \makefield{\faLinkedin}
-  {\url{https://www.linkedin.com/in/edoardo-costantini-78352b137/}}
+  \makefield{\faEnvelope[regular]}{Email: \texttt{costantini.edoardo@yahoo.com}}
+
+  \makefield{\faGlobe}{Personal website: \url{https://edoardocostantini.github.io}}
+
+  \makefield{\faGithub}{GitHub page: \url{https://github.com/EdoardoCostantini}}
+
+  \makefield{\faLinkedin}{Linkedin: \url{https://www.linkedin.com/in/edoardo-costantini-78352b137/}}
 }
 
 \rightheader{~}
@@ -78,11 +75,10 @@
 \makeheaders[c]
 
 \makerubric{employment}
-\makerubric{education}
-
 % If you're not a researcher nor an academic, you probably don't have any publications; delete this line.
 %% Sometimes when a section can't be nicely modelled with the \entry[]... mechanism; hack our own and use \input NOT \makerubric
-\input{publications}
+% \input{publications}
+\makerubric{education}
 
 \makerubric{skills}
 %\makerubric{misc}
