--- a/skills.tex
+++ b/skills.tex
@@ -3,16 +3,16 @@
 
 \begin{rubric}{Skills}
 \noentry{2014 -- 2015}
-\entry*[Data analysis]
-Multiple imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing
 \entry*[Coding and software tools\hfill]
-R, cluster computing, Git, Bash, Python, \LaTeX, SPSS
+R, cluster computing, version controlling (Git), Bash, Python, \LaTeX, SPSS
 %\entry*[Databases]
 %	My\smallcaps{SQL}, Postgre\smallcaps{SQL}, \smallcaps{HSQL}, \smallcaps{SQL}ite, LotusNotes.
 \entry*[Web development]
 R Shiny, Hugo, R blogdown, \textsc{css}
+\entry*[Data analysis]
+Multiple imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing
 \entry*[Miscellaneous]
-Academic research, teaching, consultation
+Academic research and writing, teaching, consultation
 \entry*[Languages]
 	Strong reading, writing, and speaking competencies in English and Italian
 \end{rubric}
