format: harmonize capitalization

--- a/Inhalt/1_Angaben.tex
+++ b/Inhalt/1_Angaben.tex
@@ -2,10 +2,10 @@
 \vspace*{-10pt}
 
 %Personal information section
-\section{Personal Information}
+\section{Personal information}
     \cvline{Date of birth}{16 October 1994}
     \cvline{Nationality}{Italian}
-    \cvline{Address}{Schouwburgring 77-25, Tilburg}
+    \cvline{Address}{Schouwburgring 77-25, Tilburg, the Netherlands}
     \cvline{E-mail}{\href{mailto:costantini.edoardo@yahoo.com}{costantini.edoardo@yahoo.com}}
     \cvline{Personal website}{\href{https://edoardocostantini.github.io}{https://edoardocostantini.github.io}}
 
