--- a/Inhalt/3_Berufserfahrung.tex
+++ b/Inhalt/3_Berufserfahrung.tex
@@ -1,21 +1,21 @@
 \section{Experience}
 
 \cventry{09/2019 - ongoing}
-{Ph.D. Researcher}
+{Ph.D. researcher}
 {Tilburg University} % Company
 {} % Where
 {Department of Methodology and Statistics}   % Extra Info
 {
     \begin{itemize}
         \item \textit{Academic research} | I developed cutting-edge algorithms to address non-response bias in questionnaires.
-        \item \textit{Development of educational material} | I designed material for university students to practice and evaluate their computational and statistical skills. I developed a website to share accessible study material based on my research (see the `Digital garden` on my personal website).
-        \item \textit{Teaching} | I thought university master students how to program in R and perform complex data analyses in R. I recorded video tutorials to facilitate hybrid learning.
+        \item \textit{Development of educational material} | I designed tutorials and study material for university students to practice and evaluate their computational and statistical skills. I developed a website to share accessible blog posts on statistical concepts (see the `Digital garden` on my personal website).
+        \item \textit{Frontal teaching} | I thought university master students how to program and perform complex data analyses in R. I recorded instructional videos to facilitate hybrid learning.
         \item \textit{Coordination} | I managed small groups of teaching assistants for multiple iterations of the main statistics course in a data science master program.
     \end{itemize}
 }
 
 \cventry{08/2018 - 06/2019}
-{Teaching Assistant}
+{Teaching assistant}
 {Tilburg University} % Company
 {} % Where
 {Department of Methodology and Statistics}   % Extra Info
