--- a/Inhalt/2_Studium.tex
+++ b/Inhalt/2_Studium.tex
@@ -1,6 +1,6 @@
 \section{Education}
     \cventry{08/2017 - 08/2019}
-            {Research Master}
+            {Research master}
             {Methodology and Statistics for Social and Behavioral Sciences}
             {Tilburg University}
             {the Netherlands}
