format: improve spacing

--- a/Einstellungen/packages.tex
+++ b/Einstellungen/packages.tex
@@ -6,4 +6,5 @@
 \usepackage{anyfontsize}
 \usepackage[ngerman]{babel} 
 \usepackage[ddmmyyyy]{datetime}
+\usepackage{setspace} % for line spacing
 \renewcommand{\dateseparator}{.}
