--- a/Inhalt/3_Berufserfahrung.tex
+++ b/Inhalt/3_Berufserfahrung.tex
@@ -6,12 +6,16 @@
 {} % Where
 {Department of Methodology and Statistics}   % Extra Info
 {
+    \vspace{0.1em}
+    \begin{spacing}{1.1}
     \begin{itemize}
-        \item \textit{Academic research} | I developed cutting-edge algorithms to address non-response bias in questionnaires.
-        \item \textit{Development of educational material} | I designed tutorials and study material for university students to practice and evaluate their computational and statistical skills. I developed a website to share accessible blog posts on statistical concepts (see the `Digital garden` on my personal website).
-        \item \textit{Frontal teaching} | I thought university master students how to program and perform complex data analyses in R. I recorded instructional videos to facilitate hybrid learning.
-        \item \textit{Coordination} | I managed small groups of teaching assistants for multiple iterations of the main statistics course in a data science master program.
+        \item \textbf{Academic research} | I developed cutting-edge algorithms to address non-response bias in questionnaires.
+        \item \textbf{Development of educational material} | I designed tutorials and study material for university students to practice and evaluate their computational and statistical skills. I developed a website to share accessible blog posts on statistical concepts (see the `Digital garden` on my personal website).
+        \item \textbf{Frontal teaching} | I taught university master students how to program and perform complex data analyses in R. I recorded instructional videos to facilitate hybrid learning.
+        \item \textbf{Coordination} | I managed small groups of teaching assistants for multiple iterations of the main statistics course in a data science master program.
     \end{itemize}
+    \end{spacing}
+    \vspace{1em}
 }
 
 \cventry{08/2018 - 06/2019}
@@ -20,12 +24,16 @@
 {} % Where
 {Department of Methodology and Statistics}   % Extra Info
 {
-    I held frontal lectures and computer laboratory sessions for courses on:
+    \vspace{0.1em}
+    \begin{spacing}{1.1}
+    I held \textbf{frontal lectures} and \textbf{computer laboratory sessions} for courses on:
     \begin{itemize}
         \item \textit{Computational statistics} (master's level.)
 		\item \textit{Statistics and methodology} (master's level.)
 		\item \textit{Experimental research methods} (bachelor's level.)
     \end{itemize}
+    \end{spacing}
+    \vspace{1em}
 }
 
 \cventry{03/2017 - 05/2017}
@@ -34,6 +42,7 @@
 {Trento, Italy} % Where
 {}   % Extra Info
 {
+    \vspace{0.1em}
     \begin{itemize}
         \item Data cleaning for a public policy evaluation project.
     \end{itemize}
