--- a/Inhalt/6_Kenntnisse.tex
+++ b/Inhalt/6_Kenntnisse.tex
@@ -1,10 +1,10 @@
 \section{Skills}
     
-    \subsection{IT}
+    % \subsection{IT}
         \cvitem{Coding and software}{R, cluster computing, version controlling (Git), Bash, Python, \LaTeX, SPSS}
         \cvitem{Web development}{R Shiny, Hugo, R blogdown, \textsc{css}}
         \cvitem{Data analysis}{Multiple imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing}
-    \subsection{Languages}
+    % \subsection{Languages}
         \cvlanguage{Italian}{Native speaker}{}
         \cvlanguage{Englisch}{Full Professional working proficiency (TOEFL C1)}{}
         \cvlanguage{Dutch}{Basic communication}{}
