content: update profile pic

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
         \input{Inhalt/1_Angaben}                % Personal information
     \end{minipage}
     \hfill
-    \fcolorbox{MyColor}{white}{\myPhoto{Abbildungen/photo.jpeg}}
+    \fcolorbox{MyColor}{white}{\myPhoto{Abbildungen/costantini.jpeg}}
         
     % Main content
     \input{Inhalt/3_Berufserfahrung}        % Work experience
