--- a/Inhalt/6_Kenntnisse.tex
+++ b/Inhalt/6_Kenntnisse.tex
@@ -6,7 +6,7 @@
         \cvitem{Data analysis}{Multiple imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing}
     % \subsection{Languages}
         \cvlanguage{Italian}{Native speaker}{}
-        \cvlanguage{Englisch}{Full Professional working proficiency (TOEFL C1)}{}
+        \cvlanguage{English}{Full Professional working proficiency (TOEFL C1)}{}
         \cvlanguage{Dutch}{Basic communication}{}
         \vspace*{5pt}
     
