content: add research software development skills

--- a/Inhalt/3_Berufserfahrung.tex
+++ b/Inhalt/3_Berufserfahrung.tex
@@ -1,6 +1,6 @@
 \section{Experience}
 
-\cventry{09/2019 - ongoing}
+\cventry{09/2019 - 12/2023 (estimated)}
 {Ph.D. researcher}
 {Tilburg University} % Company
 {} % Where
@@ -9,10 +9,10 @@
     \vspace{0.1em}
     \begin{spacing}{1.1}
     \begin{itemize}
-        \item \textbf{Academic research} | I developed cutting-edge algorithms to address non-response bias in questionnaires.
+        \item \textbf{Research software development} | I developed a standalone package to estimate a special type of principal component analysis. I also contributed to the development of a variety of R packages in the field of social science (e.g., mice, statcheck). 
+        \item \textbf{Academic research} | I developed cutting-edge algorithms to address non-response bias in social surveys.
         \item \textbf{Development of educational material} | I designed tutorials and study material for university students to practice and evaluate their computational and statistical skills. I developed a website to share accessible blog posts on statistical concepts (see the `Digital garden` on my personal website).
         \item \textbf{Frontal teaching} | I taught university master students how to program and perform complex data analyses in R. I recorded instructional videos to facilitate hybrid learning.
-        \item \textbf{Coordination} | I managed small groups of teaching assistants for multiple iterations of the main statistics course in a data science master program.
     \end{itemize}
     \end{spacing}
     \vspace{1em}
