hk: better word for expected end time of phd

--- a/Inhalt/3_Berufserfahrung.tex
+++ b/Inhalt/3_Berufserfahrung.tex
@@ -1,6 +1,6 @@
 \section{Experience}
 
-\cventry{09/2019 - 12/2023 (estimated)}
+\cventry{09/2019 - 12/2023 (expected)}
 {Ph.D. researcher}
 {Tilburg University} % Company
 {} % Where
