--- a/Inhalt/6_Kenntnisse.tex
+++ b/Inhalt/6_Kenntnisse.tex
@@ -3,7 +3,7 @@
     % \subsection{IT}
         \cvitem{Coding and software}{R, cluster computing, version controlling (Git), Bash, Python, \LaTeX, SPSS}
         \cvitem{Web development}{R Shiny, Hugo, R blogdown, \textsc{css}}
-        \cvitem{Data analysis}{Multiple imputation, regression analysis, principal component analysis, regression and classification trees, regularized regression, A/B testing}
+        \cvitem{Data analysis}{Multiple imputation, principal component analysis, regression and classification trees, regularized regression, and other machine learning techniques}
     % \subsection{Languages}
         \cvlanguage{English}{Full Professional working proficiency (TOEFL C1)}{}
         \cvlanguage{Italian}{Native speaker}{}
