content: add github, get rid of precise address

--- a/Inhalt/1_Angaben.tex
+++ b/Inhalt/1_Angaben.tex
@@ -5,10 +5,7 @@
 \section{Personal information}
     \cvline{Date of birth}{16 October 1994}
     \cvline{Nationality}{Italian}
-    \cvline{Address}{Schouwburgring 77-25, Tilburg, the Netherlands}
+    \cvline{Based in}{Tilburg, Netherlands}
     \cvline{E-mail}{\href{mailto:costantini.edoardo@yahoo.com}{costantini.edoardo@yahoo.com}}
     \cvline{Personal website}{\href{https://edoardocostantini.github.io}{https://edoardocostantini.github.io}}
-
-    % \makefield{\faGithub}{GitHub page: \url{https://github.com/EdoardoCostantini}}
-  
-    % \makefield{\faLinkedin}{Linkedin: \url{https://www.linkedin.com/in/edoardo-costantini-78352b137/}}
+    \cvline{GitHub}{\href{https://github.com/EdoardoCostantini}{https://github.com/EdoardoCostantini}}
