--- a/Inhalt/3_Berufserfahrung.tex
+++ b/Inhalt/3_Berufserfahrung.tex
@@ -9,9 +9,8 @@
     \vspace{0.1em}
     \begin{spacing}{1.1}
     \begin{itemize}
-        \item \textbf{Research software development} | I developed an R package to estimate a special type of principal component analysis 
-        (\href{https://github.com/EdoardoCostantini/gspcr}{gspcr}). I contributed to the development of a variety of R packages in the field of social science (e.g., \href{https://github.com/amices/mice/pull/438}{mice}, \href{https://github.com/MicheleNuijten/statcheck}{statcheck}). I developed numerous web applications to facilitate interaction with research results.
-        \item \textbf{Academic research} | I developed cutting-edge algorithms to address non-response bias in social surveys.
+        \item \textbf{Software development} | I developed software for addressing missing data in social science surveys in collaboration with the sociology department at Tilburg University. I contributed to a variety of existing R packages in the field of social science. I developed numerous web applications to facilitate interaction with my research results.
+        \item \textbf{Academic research} | I have created innovative algorithms to tackle non-response bias in social surveys and written scientific articles detailing their effectiveness and uses.
         \item \textbf{Development of educational material} | I designed tutorials and study material for university students to practice and evaluate their computational and statistical skills. I developed a website to share accessible blog posts on statistical concepts (see the `Digital garden` on my personal website).
         \item \textbf{Frontal teaching} | I taught university master students how to program and perform complex data analyses in R. I recorded instructional videos to facilitate hybrid learning.
     \end{itemize}
