hk: punctuation and other small stuff

--- a/Inhalt/6_Kenntnisse.tex
+++ b/Inhalt/6_Kenntnisse.tex
@@ -1,7 +1,7 @@
 \section{Skills}
     
     % \subsection{IT}
-        \cvitem{Coding and software}{R, cluster computing, version controlling (Git), Bash, Python, \LaTeX, SPSS}
+        \cvitem{Coding and software}{R, version controlling (Git), Bash, Python, cluster computing, \LaTeX, SPSS}
         \cvitem{Web development}{R Shiny, Hugo, R blogdown, \textsc{css}}
         \cvitem{Data analysis}{Multiple imputation, principal component analysis, regression and classification trees, regularized regression, and other machine learning techniques}
     % \subsection{Languages}
