refactor: rename all files to make sense

--- a/main.tex
+++ b/main.tex
@@ -16,18 +16,18 @@
     \begin{minipage}[b]{0.6\textwidth}
         {\LARGE Edoardo Costantini}
         \vspace{2em}
-        \input{Inhalt/1_Angaben}                % Personal information
+        \input{Inhalt/About}                % Personal information
     \end{minipage}
     \hfill
     \fcolorbox{MyColor}{white}{\myPhoto{Abbildungen/costantini.jpeg}}
         
     % Main content
-    \input{Inhalt/3_Berufserfahrung}        % Work experience
-    \input{Inhalt/2_Studium}                % Studies
-    \input{Inhalt/6_Kenntnisse}             % Skills and interests
-    % \input{Inhalt/4_Praktika}               % Internships
-    % \input{Inhalt/5_Zusatzqualifikationen}  % Further qualifications
-    % \input{Inhalt/7_Extra}                  % Extra information
+    \input{Inhalt/Experience}        % Work experience
+    \input{Inhalt/Studies}                % Studies
+    \input{Inhalt/Skills}             % Skills and interests
+    % \input{Inhalt/Internships}               % Internships
+    % \input{Inhalt/Additional-qualifications}  % Further qualifications
+    % \input{Inhalt/Extra}                  % Extra information
     
     % Signature
     % \sign{Edoardo Costantini}{Musterstadt}{Abbildungen/signature.jpg}
