--- a/Inhalt/Experience.tex
+++ b/Inhalt/Experience.tex
@@ -9,7 +9,7 @@
     \vspace{0.1em}
     \begin{spacing}{1.1}
     \begin{itemize}
-        \item \textbf{Software development} | I developed software for addressing missing data in social science surveys in collaboration with the sociology department. I contributed to a variety of existing R packages in the field of social science. I developed numerous web applications to facilitate interaction with my research results.
+        \item \textbf{Software development} | I developed software for addressing missing data in social science surveys in collaboration with the sociology department. I contributed to a variety of existing R packages for the social sciences. I developed numerous web applications to facilitate interaction with my research results.
         \item \textbf{Academic research} | I created innovative algorithms to tackle non-response bias in social surveys and written scientific articles detailing their effectiveness and use cases.
         \item \textbf{Development of educational material} | I designed tutorials and study material for university students to practice and evaluate their computational and statistical skills. I developed a website to share accessible blog posts on statistical concepts (see the `Digital garden` on my personal website).
         \item \textbf{Frontal teaching} | I taught university master students how to program and perform complex data analyses in R. I recorded instructional videos to facilitate hybrid learning.
@@ -28,9 +28,9 @@
     \begin{spacing}{1.1}
     I held \textbf{frontal lectures} and \textbf{computer laboratory sessions} for courses on:
     \begin{itemize}
-        \item \textit{Computational statistics} (master's level.
-		\item \textit{Statistics and methodology} (master's level.
-		\item \textit{Experimental research methods} (bachelor's level.)
+        \item \textit{Computational statistics} (master's level).
+		\item \textit{Statistics and methodology} (master's level).
+		\item \textit{Experimental research methods} (bachelor's level).
     \end{itemize}
     \end{spacing}
     \vspace{1em}
