content: add publications

--- a/Einstellungen/packages.tex
+++ b/Einstellungen/packages.tex
@@ -4,7 +4,7 @@
 \usepackage{ragged2e}
 \usepackage{xcolor}
 \usepackage{anyfontsize}
-\usepackage[ngerman]{babel} 
 \usepackage[ddmmyyyy]{datetime}
 \usepackage{setspace} % for line spacing
+\usepackage{natbib}
 \renewcommand{\dateseparator}{.}
